testsuite/tests/rewriting_errors/invalid_rewriting/test.out
main.adb:3:4: rule violation: Custom rule violation
3 |    goto lbl;   --  FLAG
  |    ^^^^^^^^^

error: Error(s) while applying a rewriting context: [Missing ';' at <3:9-3:12>]
checker.lkql:4:22 in <anonymous>
  4 | map(roots, (root) => node_checker(root))
    |                      ^^^^^^^^^^^^^^^^^^

checker.lkql:4:1 in checker.lkql
  4 | map(roots, (root) => node_checker(root))
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
